<?xml version="1.0" encoding="utf-8"?>
<resources>

  <string name="appName">Primedle</string>
  <string name="help">Help</string>
  <string name="refresh">Refresh</string>
  <string name="share">Share</string>
  <string name="image">Image</string>
  <string name="options">Options</string>
  <string name="confetti">Confetti</string>
  <string name="fanfare">Fanfare</string>
  <string name="word">Default word</string>
  <string name="dict">Dictionary</string>
  <string name="aard2">Aard2</string>
  <string name="quickdic">Quickdic</string>
  <string name="wikt">Wictionary</string>
  <string name="code">Code</string>
  <string name="text">Text</string>
  <string name="qrCode">QR code</string>
  <string name="getCode">Get code</string>
  <string name="enterCode">Enter code</string>
  <string name="about">About</string>

  <string name="language">Language</string>
  <string name="afrikaans">Afrikaans</string>
  <string name="english">English</string>
  <string name="italian">Italian</string>
  <string name="spanish">Spanish</string>
  <string name="catalan">Catalan</string>
  <string name="french">French</string>
  <string name="portuguese">Portuguese</string>
  <string name="german">German</string>
  <string name="dutch">Dutch</string>
  <string name="hungarian">Hungarian</string>
  <string name="indonesian">Indonesian</string>

  <string name="theme">Theme</string>
  <string name="dark">Dark</string>
  <string name="blue">Blue</string>
  <string name="cyan">Cyan</string>
  <string name="orange">Orange</string>
  <string name="purple">Purple</string>
  <string name="black">Black</string>
  <string name="light">Light</string>
  <string name="red">Red</string>

  <string name="highlight">Highlight colours</string>
  <string name="reset">Reset</string>
  <string name="selectHighlight">
    Select highlight colours
  </string>

  <string name="press">Tap enter</string>
  <string name="finish">Finish the word first</string>
  <!--<string name="guess">Guess the word first</string>-->
  <string name="notListed">Not in word list</string>
  <string name="solved">Solved, tap refresh</string>
  <string name="newCode">New code set</string>
  <string name="notRecognised">Code not recognised</string>

  <string name="congratulations">
    Congratulations! You have guessed %s correctly
  </string>

  <string name="version" formatted="false"><a href="https://github.com/Apechi/primeble">%s</a>\n\nBuilt
  %s\n\nCopyright \u00A9 2024 <a href="https://github.com/Apechi/primeble">Made by: Bill
  Farmer. Modified by: The Prime</a>\n\nDictionaries from <a href="https://github.com/lexica">Lexica</a>\nThemes from <a href="https://github.com/PoorLazyCoder">PoorLazyCoder</a>\nFrench
  language and dictionary loader from <a href="https://github.com/tatref">tatref</a> and <a href="http://www.lexique.org">Lexique</a>\nConfetti from <a href="https://github.com/DanielMartinus/Konfetti">Konfetti</a>\n\nLicence <a href="https://www.gnu.org/licenses/gpl.txt">GNU GPLv3</a>
  </string>

  <string name="admob_app_id" translatable="false">ca-app-pub-3940256099942544~3347511713</string>
  <string name="sdk_key_applovin" translatable="false">T7PPns0K6JV00uGv0ZAEKsTWrpwA-N4Hchi_KKecaqTa_U5zQcyyoI_pTcC5TM1OgfrLz5dWGdASKWgK6l5Sks</string>


</resources>
